# flare-notes

./: .gitignore  CMakeLists.txt  LICENSE  ToDoLog  build.sh
flare/base/: CMakeLists.txt  align.h  buffer.cc  buffer.h  buffer_test.cc  callback.h  casting.h  casting_benchmark.cc  casting_test.cc  chrono.cc  chrono.h  chrono_test.cc  compression.cc  compression.h  compression_test.cc  deferred.h  deferred_test.cc  delayed_init.h  delayed_init_test.cc  demangle.cc  demangle.h  dependency_registry.h  dependency_registry_test.cc  down_cast.h  down_cast_test.cc  encoding.h  endian.h  endian_test.cc  enum.h  enum_test.cc  erased_ptr.cc  erased_ptr.h  erased_ptr_test.cc  expected.h  expected_test.cc  exposed_var.cc  exposed_var.h  exposed_var_test.cc  function.h  function_benchmark.cc  (+50 more)
flare/base/buffer/: CMakeLists.txt  builtin_buffer_block.cc  builtin_buffer_block.h  compression_output_stream.cc  compression_output_stream.h  compression_output_stream_test.cc  packing.cc  packing.h  packing.pb.cc  packing.pb.h  packing.proto  packing_test.cc  polymorphic_buffer.h  view.cc  view.h  view_test.cc  zero_copy_stream.cc  zero_copy_stream.h  zero_copy_stream_test.cc
flare/base/compression/: CMakeLists.txt  compression.cc  compression.h  compression_test.cc  gzip.cc  gzip.h  lz4.cc  lz4.h  snappy.cc  snappy.h  util.cc  util.h  util_test.cc  zstd.cc  zstd.h
flare/base/crypto/: CMakeLists.txt  blake3.cc  blake3.h  blake3_test.cc  md5.cc  md5.h  md5_test.cc  sha.cc  sha.h  sha_test.cc
flare/base/encoding/: CMakeLists.txt  base64.cc  base64.h  base64_test.cc  hex.cc  hex.h  hex_test.cc  percent.cc  percent.h  percent_test.cc
flare/base/experimental/: CMakeLists.txt  bloom_filter.cc  bloom_filter.h  bloom_filter_test.cc  byte_set.cc  byte_set.h  byte_set_test.cc  flyweight.h  flyweight_test.cc  lazy_eval.h  lazy_eval_test.cc  seqlocked.h  seqlocked_benchmark.cc  seqlocked_test.cc  uuid.cc  uuid.h  uuid_test.cc
flare/base/future/: CMakeLists.txt  basics.h  boxed.h  core.h  executor.h  future-impl.h  future.h  future_test.cc  impls.h  promise-impl.h  promise.h  types.h  utils.h
flare/base/hazptr/: entry.h  entry_cache.cc  entry_cache.h  hazptr.h  hazptr_domain.cc  hazptr_domain.h  hazptr_object.cc  hazptr_object.h
flare/base/internal/: CMakeLists.txt  annotation.h  background_task_host.cc  background_task_host.h  background_task_host_test.cc  biased_mutex.h  biased_mutex_benchmark.cc  biased_mutex_test.cc  builtin_monitoring.h  builtin_monitoring_test.cc  case_insensitive_hash_map.h  case_insensitive_hash_map_benchmark.cc  case_insensitive_hash_map_test.cc  circular_buffer.h  circular_buffer_benchmark.cc  circular_buffer_test.cc  copyable_atomic.h  copyable_atomic_test.cc  cpu.cc  cpu.h  cpu_test.cc  curl.cc  curl.h  doubly_linked_list.h  doubly_linked_list_test.cc  dpc.cc  dpc.h  dpc_test.cc  early_init.h  early_init_test.cc  hash_map.h  hash_map_benchmark.cc  hash_map_test.cc  index_alloc.cc  index_alloc.h  index_alloc_test.cc  lazy_init.h  lazy_init_test.cc  logging.cc  logging.h  (+18 more)
flare/base/monitoring/: CMakeLists.txt  common.cc  common.h  dispatcher.cc  dispatcher.h  event.cc  event.h  fwd.h  init.cc  init.h  integration_test.cc  monitoring_system.cc  monitoring_system.h
flare/base/net/: CMakeLists.txt  endpoint.cc  endpoint.h  endpoint_benchmark.cc  endpoint_test.cc  uri.cc  uri.h  uri_extension_test.cc  uri_test.cc
flare/base/object_pool/: CMakeLists.txt  disabled.cc  disabled.h  disabled_test.cc  global.cc  global.h  global_test.cc  memory_node_shared.cc  memory_node_shared.h  memory_node_shared_benchmark.cc  memory_node_shared_test.cc  ref_counted.h  ref_counted_test.cc  thread_local.cc  thread_local.h  thread_local_test.cc  types.h
flare/base/option/: CMakeLists.txt  dynamically_changed.h  gflags_provider.cc  json_parser.cc  json_parser.h  json_parser_test.cc  key.cc  key.h  key_test.cc  option_impl.h  option_provider.cc  option_provider.h  option_service.cc  option_service.h  option_service_test.cc  proto_parser.h  proto_parser_test.cc
flare/base/thread/: CMakeLists.txt  attribute.cc  attribute.h  attribute_test.cc  latch.cc  latch.h  latch_test.cc  out_of_duty_callback.cc  out_of_duty_callback.h  out_of_duty_callback_benchmark.cc  out_of_duty_callback_test.cc  semaphore.h  semaphore_test.cc  spinlock.cc  spinlock.h  spinlock_test.cc  thread_cached.h  thread_cached_benchmark.cc  thread_cached_test.cc  thread_local.h  thread_local_benchmark.cc  thread_local_test.cc
flare/base/write_mostly/: CMakeLists.txt  basic_ops.h  basic_ops_test.cc  metrics.cc  metrics.h  metrics_benchmark.cc  metrics_test.cc  write_mostly.h  write_mostly_benchmark.cc
flare/fiber/: CMakeLists.txt  alternatives.cc  alternatives.h  alternatives_test.cc  async.h  async_test.cc  barrier.h  barrier_test.cc  condition_variable.cc  condition_variable.h  condition_variable_test.cc  execution_context.cc  execution_context.h  execution_context_benchmark.cc  execution_context_test.cc  fiber.cc  fiber.h  fiber_local.cc  fiber_local.h  fiber_local_benchmark.cc  fiber_local_test.cc  fiber_test.cc  future.h  future_test.cc  latch.cc  latch.h  latch_test.cc  logging.cc  logging.h  logging_test.cc  mutex.cc  mutex.h  runtime.cc  runtime.h  runtime_test.cc  semaphore.h  semaphore_test.cc  shared_mutex.cc  shared_mutex.h  shared_mutex_test.cc  (+9 more)
flare/fiber/detail/: CMakeLists.txt  assembly.h  assembly_benchmark.cc  fiber_desc.cc  fiber_desc.h  fiber_desc_test.cc  fiber_entity.cc  fiber_entity.h  fiber_entity_test.cc  fiber_worker.cc  fiber_worker.h  fiber_worker_test.cc  run_queue.cc  run_queue.h  run_queue_test.cc  runnable_entity.h  scheduling_group.cc  scheduling_group.h  scheduling_group_test.cc  scheduling_parameters.cc  testing.h  (+11 more)
flare/init/: CMakeLists.txt  on_init.cc  on_init.h  on_init_test.cc  override_flag.cc  override_flag.h  override_flag_test.cc  override_rlimit.cc  override_rlimit_test.cc
flare/io/: CMakeLists.txt  acceptor.h  datagram_transceiver.h  descriptor.cc  descriptor.h  descriptor_test.cc  event_loop.cc  event_loop.h  event_loop_test.cc  stream_connection.h
flare/net/: CMakeLists.txt
(+101 files in other folders)
